<resources>
    <string name="app_name">Pajé APP</string>
    <string name="logo_description">Logotipo FinanFácil</string>
    <string name="by_category">Despesas por categoria</string>
    <string name="history">Histórico</string>
    <string name="category">Categorias</string>
    <string name="register">Registrar</string>
    <string name="dashboard">Dashboard</string>
    <string name="month">Maio</string>
    <string name="quinta_feira_02">Quinta-feira, 02</string>
    <string name="quarta_feira_01">Quarta-feira, 01</string>

</resources>