<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/img_app" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_bg"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_marginStart="150dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Maio"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp"></Space>

            <Button
                android:id="@+id/arrow1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/down_arrow"
                android:text="" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Saldo"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvBalanceAmount"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_gravity="center_horizontal"
            android:text="R$ 3.500,00"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Primeiro par de TextViews -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">



                <TextView
                    android:id="@+id/tvIncome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="13dp"
                    android:text="Receita"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvIncomeAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R$ 3.500,00"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Segundo par de TextViews -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="13dp"
                    android:text="Despesas"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvExpenseAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R$ 1.200,00"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/clock_image"
                android:text="" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/history" />
        </LinearLayout>

        <Space
            android:layout_width="30dp"
            android:layout_height="0dp"></Space>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/category_image"
                android:text="" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/category" />
        </LinearLayout>

        <Space
            android:layout_width="30dp"
            android:layout_height="0dp"></Space>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/add_image1"
                android:text="" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register" />
        </LinearLayout>

        <Space
            android:layout_width="30dp"
            android:layout_height="0dp"></Space>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/trend_image"
                android:text="" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dashboard" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:textStyle="bold"
        android:text="@string/by_category" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="141dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_bg"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Aqui você pode usar uma ImageView para exibir o gráfico de pizza, ou utilizar uma biblioteca para gráficos -->
        <ImageView
            android:id="@+id/ivPieChart"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/category"
            android:src="@drawable/piechart_image" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"></Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <!-- Alimentação -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp">

                <TextView
                    android:id="@+id/tvFoodLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Alimentação"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvFoodExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R$ 420,00"
                    android:textSize="16sp"
                    android:layout_gravity="end" />
            </LinearLayout>

            <!-- Moradia -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp">

                <TextView
                    android:id="@+id/tvHousingLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Moradia"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvHousingExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R$ 380,00"
                    android:textSize="16sp"
                    android:layout_gravity="end" />
            </LinearLayout>

            <!-- Transporte -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp">

                <TextView
                    android:id="@+id/tvTransportLabel"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Transporte"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvTransportExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R$ 270,00"
                    android:textSize="16sp"
                    android:layout_gravity="end" />
            </LinearLayout>

            <!-- Lazer -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp">

                <TextView
                    android:id="@+id/tvLeisureLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Lazer"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvLeisureExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R$ 130,00"
                    android:textSize="16sp"
                    android:layout_gravity="end" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:textStyle="bold"
        android:text="@string/history" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_bg"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quinta_feira_02"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginBottom="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="3dp">


            <TextView
                android:id="@+id/tvSpotify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Spotify"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSpotifyTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="11:47"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSpotifyAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="R$ 19,90"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tvGym"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Academia"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvGymTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="10:17"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvGymAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="R$ 59,90"
                android:textSize="16sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvHistory01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quarta_feira_01"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginBottom="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/tvLunch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cajuzada"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvLunchTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="06:99"
                android:textSize="16sp" />
            <!--Tubarão da a bunda-->
            <TextView
                android:id="@+id/tvLunchAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="R$ 16,00"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSalary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Salário"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSalaryTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="08:89"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSalaryAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="R$ 320,00"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
